deployment/openshift/backend_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: nfomin/server:latest
          ports:
            - containerPort: 3000
      securityContext:
        runAsUser: 1000
        fsGroup: 1000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: server
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
